# DAC8532-STM32-Driver

./: .clang-format  .gitignore  CMakeLists.txt  DAC8532.c  DAC8532.h  README.md
include/: DAC8532.h
src/: DAC8532.c
